--- a/deploy-manifest.json
+++ b/deploy-manifest.json
@@ -2,11 +2,7 @@
   "version": 1,
   "framework": { "name": "react", "version": "18.2.0" },
   "imageSettings": {
-    "sizes": [
-      100,
-      200,
-      1920
-    ],
+    "sizes": [375, 568, 675, 768, 1024, 1280, 1440, 1920, 3840, 5234, 7680, 224, 280, 334],
     "domains": ["images.unsplash.com", "image.pbs.org", "image.pbskids.org"],
     "remotePatterns": [
       {
